[gd_scene load_steps=32 format=3 uid="uid://d2plfhokqusxu"]

[ext_resource type="Script" uid="uid://ctfmtfd66gnqy" path="res://Script/CamaraShake.gd" id="1_b3vrs"]
[ext_resource type="PackedScene" uid="uid://demff3tob8qww" path="res://Scenes/spawnHighscore.tscn" id="1_mxr6m"]
[ext_resource type="Script" uid="uid://b4m7h7mh6r1ef" path="res://Scenes/MoveHighscore.gd" id="1_xi21b"]
[ext_resource type="Theme" uid="uid://lcjmsych3ypw" path="res://Font/DefaultTheme.tres" id="2_0udrg"]
[ext_resource type="Script" uid="uid://c1bareaaqecv0" path="res://Script/WinPointSpawner.gd" id="3_e331a"]
[ext_resource type="Script" uid="uid://ehunuv0l82x7" path="res://Script/PointsCounter.gd" id="4_fr20v"]
[ext_resource type="PackedScene" uid="uid://b5qel7a7hc3id" path="res://ParticelEmmiters/Charge.tscn" id="6_8uj3d"]
[ext_resource type="PackedScene" uid="uid://b3k51b514bswg" path="res://ParticelEmmiters/buildEffect.tscn" id="7_v2n38"]
[ext_resource type="Texture2D" uid="uid://drribub13npt7" path="res://UI/Points/#1 - Transparent Icons3.png" id="8_mxr6m"]
[ext_resource type="PackedScene" uid="uid://uuw6qcotihjo" path="res://Scenes/restart_button.tscn" id="9_xi21b"]
[ext_resource type="PackedScene" uid="uid://bfeh503ya5cob" path="res://Scenes/NextLevelButton.tscn" id="10_2bjyx"]
[ext_resource type="Script" uid="uid://oyi0dvyexiek" path="res://addons/controller_icons/objects/ControllerIconTexture.gd" id="10_b3vrs"]
[ext_resource type="Material" uid="uid://dnu4j47rh5mfw" path="res://ParticelEmmiters/BadEffect.tres" id="11_0udrg"]
[ext_resource type="PackedScene" uid="uid://de7nkl3b3m4j6" path="res://Scenes/audio_control.tscn" id="11_5iqpk"]
[ext_resource type="Script" uid="uid://d3h3momjifqcm" path="res://Script/Menus/lostlabel.gd" id="11_v2n38"]
[ext_resource type="AudioStream" uid="uid://d0wdwqfejg4i4" path="res://Audio/cash-register-kaching-376867.mp3" id="12_yhux5"]
[ext_resource type="PackedScene" uid="uid://cfh2hfv8mqnin" path="res://ParticelEmmiters/BadEffect.tscn" id="13_mxr6m"]
[ext_resource type="Material" uid="uid://bwhewwh1kb4k5" path="res://ParticelEmmiters/BuildMatirial.tres" id="14_xi21b"]
[ext_resource type="Texture2D" uid="uid://sei5m8pa3yaa" path="res://UI/Confetti.png" id="15_2bjyx"]
[ext_resource type="Material" uid="uid://bue6j2ibqiqed" path="res://ParticelEmmiters/BuildEffect.tres" id="16_5iqpk"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_yupi4"]
noise_type = 2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nkwte"]
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 1.0
emission_ring_radius = 88.14
emission_ring_inner_radius = 33.2
emission_ring_cone_angle = 90.0
angle_min = 1.0728835e-05
angle_max = 1.0728835e-05
spread = 0.0
gravity = Vector3(0, -9, 0)
linear_accel_min = 20.849997
linear_accel_max = 20.849997

[sub_resource type="Curve" id="Curve_6f31x"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.71428573, 1), 0.0, 0.0, 0, 0, Vector2(0.9849624, 0.59550565), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_rf4lr"]
curve = SubResource("Curve_6f31x")

[sub_resource type="Curve" id="Curve_74qqa"]
_limits = [0.0, 100.0, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 28.08989, 0, 1, Vector2(1, 28.08989), 28.08989, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_eywsm"]
curve = SubResource("Curve_74qqa")

[sub_resource type="Curve" id="Curve_7m4kt"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.78195494, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.6067416), -5.4171324, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_jewl8"]
curve = SubResource("Curve_7m4kt")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_81yy2"]
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 180.0
initial_velocity_min = 280.0
initial_velocity_max = 320.0
angular_velocity_min = -180.00002
angular_velocity_max = 179.99998
gravity = Vector3(0, 75, 0)
linear_accel_min = 9.999997
linear_accel_max = 29.999996
damping_min = 74.0
damping_max = 78.0
damping_curve = SubResource("CurveTexture_eywsm")
scale_curve = SubResource("CurveTexture_jewl8")
alpha_curve = SubResource("CurveTexture_rf4lr")
hue_variation_min = -0.020000022
hue_variation_max = 0.019999977

[sub_resource type="Texture2D" id="Texture2D_b3vrs"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("10_b3vrs")
path = "Restart"
show_mode = 2
metadata/_custom_type_script = "uid://oyi0dvyexiek"

[sub_resource type="Texture2D" id="Texture2D_0udrg"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("10_b3vrs")
path = "NextLevel"
show_mode = 2
metadata/_custom_type_script = "uid://oyi0dvyexiek"

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Camera2D" type="Camera2D" parent="CanvasLayer/Control"]
position = Vector2(577, 325)
limit_enabled = false
script = ExtResource("1_b3vrs")
decay = 0.4
max_offset = Vector2(200, 185)
noise = SubResource("FastNoiseLite_yupi4")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control2" type="Control" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="Control3" type="Control" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="WinPointSpawner" type="VBoxContainer" parent="CanvasLayer/Control/HBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = ExtResource("2_0udrg")
script = ExtResource("3_e331a")

[node name="Control" type="Control" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Control3" type="Control" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1

[node name="EndPoints" type="HBoxContainer" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner" node_paths=PackedStringArray("ButtonNode", "ParticelEmmiters")]
visible = false
layout_mode = 2
script = ExtResource("4_fr20v")
ButtonNode = NodePath("../Control2/Control/HBoxContainer")
pointsAddingSpeed = 25.0
ParticelEmmiters = [NodePath("Points/PointsUp"), NodePath("Points/Kaching")]

[node name="Label" type="Label" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints"]
layout_mode = 2
theme_override_constants/line_spacing = 10
theme_override_constants/outline_size = 0
text = "BTN_POINTS"

[node name="Control" type="Control" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Points" type="Label" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints"]
layout_mode = 2

[node name="PointsUp" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints/Points" instance=ExtResource("6_8uj3d")]
position = Vector2(386, 16)
emitting = false
local_coords = true
process_material = SubResource("ParticleProcessMaterial_nkwte")

[node name="Kaching" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints/Points" instance=ExtResource("7_v2n38")]
material = null
position = Vector2(389, 17)
texture = ExtResource("8_mxr6m")
local_coords = true
process_material = SubResource("ParticleProcessMaterial_81yy2")

[node name="Control2" type="Control" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="Control" type="Control" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/Control2"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/Control2/Control"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -14.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="Restart" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/Control2/Control/HBoxContainer" instance=ExtResource("9_xi21b")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
icon = SubResource("Texture2D_b3vrs")

[node name="Control" type="Control" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/Control2/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextLevel" parent="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/Control2/Control/HBoxContainer" instance=ExtResource("10_2bjyx")]
layout_mode = 2
size_flags_horizontal = 3
icon = SubResource("Texture2D_0udrg")

[node name="LostLabel" type="Label" parent="CanvasLayer/Control/HBoxContainer/Control3"]
visible = false
modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -19.5
offset_right = 167.0
offset_bottom = 19.5
grow_horizontal = 2
grow_vertical = 2
rotation = -0.7853982
theme = ExtResource("2_0udrg")
text = "LOST_TIME"
script = ExtResource("11_v2n38")

[node name="Kaching" parent="CanvasLayer/Control/HBoxContainer/Control3/LostLabel" instance=ExtResource("7_v2n38")]
material = null
position = Vector2(157.68481, 20.506126)
scale = Vector2(2, 2)
amount = 100
texture = ExtResource("8_mxr6m")
local_coords = true
process_material = ExtResource("11_0udrg")

[node name="SpawnEffect" parent="CanvasLayer/Control/HBoxContainer/Control3/LostLabel" instance=ExtResource("13_mxr6m")]
material = ExtResource("14_xi21b")
position = Vector2(163.3417, 23.334564)
texture = ExtResource("15_2bjyx")
local_coords = true
process_material = ExtResource("16_5iqpk")

[node name="Control" type="Control" parent="CanvasLayer/Control/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7

[node name="Highscores" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1012.0
offset_right = 500.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Highscores" node_paths=PackedStringArray("highscore")]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "BTN_HIGHSCORE"
script = ExtResource("1_xi21b")
highscore = NodePath("..")

[node name="Spawnname" parent="CanvasLayer/Highscores" instance=ExtResource("1_mxr6m")]
custom_minimum_size = Vector2(500, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="AudioControl" parent="." node_paths=PackedStringArray("AudioSource") instance=ExtResource("11_5iqpk")]
AudioSource = [NodePath("Music"), NodePath("Hit"), NodePath("Miss"), NodePath("Miss2"), NodePath("Miss3"), NodePath("Kaching"), NodePath("PointsUpwards"), NodePath("StartPoint")]

[node name="Music" parent="AudioControl" index="0"]
autoplay = false

[node name="Hit" parent="AudioControl" index="1"]
volume_db = 0.0

[node name="Kaching" parent="AudioControl" index="5"]
stream = ExtResource("12_yhux5")
volume_db = -10.0

[node name="PointsUpwards" parent="AudioControl" index="6"]
volume_db = 5.0

[node name="StartPoint" parent="AudioControl" index="7"]
volume_db = 5.0

[connection signal="badSound" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner" to="AudioControl" method="_on_win_point_spawner_bad_sound"]
[connection signal="finished" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner" to="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints" method="_on_win_point_spawner_finished"]
[connection signal="goodSound" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner" to="AudioControl" method="_on_win_point_spawner_good_sound"]
[connection signal="shakeCamera" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner" to="CanvasLayer/Control/Camera2D" method="_on_win_point_spawner_shake_camera"]
[connection signal="Kachinging" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints" to="AudioControl" method="_on_end_points_kachinging"]
[connection signal="finished" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints" to="CanvasLayer/Control/HBoxContainer/Control3/LostLabel" method="_on_end_points_finished"]
[connection signal="startCountUp" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints" to="AudioControl" method="_on_end_points_start_count_up"]
[connection signal="stopCountUp" from="CanvasLayer/Control/HBoxContainer/Control3/WinPointSpawner/EndPoints" to="AudioControl" method="_on_end_points_stop_count_up"]
[connection signal="chamerashake" from="CanvasLayer/Control/HBoxContainer/Control3/LostLabel" to="CanvasLayer/Control/Camera2D" method="_on_win_point_spawner_shake_camera"]
[connection signal="playBadSound" from="CanvasLayer/Control/HBoxContainer/Control3/LostLabel" to="AudioControl" method="_on_win_point_spawner_bad_sound"]
[connection signal="button_up" from="CanvasLayer/Highscores/Button" to="CanvasLayer/Highscores/Button" method="_on_button_up"]
[connection signal="finished" from="AudioControl/StartPoint" to="AudioControl" method="_on_start_point_finished"]

[editable path="AudioControl"]
